--- a/app/views/mentions/show/_content.html.erb
+++ b/app/views/mentions/show/_content.html.erb
@@ -5,7 +5,7 @@
   <label class="col-md-3"><strong><%= Deed.model_name.human %></strong></label>
   <div class="col-md-9">
     <% if mention.deed.nil? %>
-      <em class="text-muted">no Deed referenced</em>
+      <em class="text-muted"><%= t :no_deed_referenced, scope: [:views, :mention] %></em>
     <% else %>
       <%= icon_for Deed %>
       <%= mention.deed.title %>
@@ -19,7 +19,7 @@
   <label class="col-md-3"><strong><%= Person.model_name.human %></strong></label>
   <div class="col-md-9">
     <% if mention.person.nil? %>
-      <em class="text-muted">no Person referenced</em>
+      <em class="text-muted">n<%= t :no_person_referenced, scope: [:views, :mention] %></em>
     <% else %>
       <%= icon(mention.person.gender_icon, class: 'fa-fw') %>
       <%= mention.person.name %>
@@ -33,7 +33,7 @@
   <label class="col-md-3"><strong><%= Place.model_name.human %></strong></label>
   <div class="col-md-9">
     <% if mention.place.nil? %>
-      <em class="text-muted">no Place referenced</em>
+      <em class="text-muted"><%= t :no_place_referenced, scope: [:views, :mention] %></em>
     <% else %>
       <%= icon_for Place %>
       <%= mention.place.title %>
@@ -47,7 +47,7 @@
   <label class="col-md-3"><strong><%= Role.model_name.human %></strong></label>
   <div class="col-md-9">
     <% if mention.role.nil? %>
-      <em class="text-muted">no Role referenced</em>
+      <em class="text-muted"><%= t :no_role_referenced, scope: [:views, :mention] %></em>
     <% else %>
       <%= icon_for Role %>
       <%= mention.role.title %>
@@ -61,7 +61,7 @@
   <label class="col-md-3"><strong><%= Mention.human_attribute_name :notes %></strong></label>
   <div class="col-md-9">
     <% if mention.notes.nil? or mention.notes.empty? %>
-      <em class="text-muted">no notes</em>
+      <em class="text-muted"><%= t :no_notes, scope: [:views] %></em>
     <% else %>
       <%= mention.notes %>
     <% end %>
