--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -22,28 +22,28 @@
   <div class="btn-group btn-group-sm" role="group">
     <%= link_to mentions_path(person_id: place.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show linked #{Mention.model_name.plural.humanize}",
+                title: t(:show_linked_mentions, scope: [:views, :place]),
                 data: { toggle: 'tooltip' } do %>
       <%= place.mentions.count %>
       <%= icon_for Mention %>
     <% end %>
     <%= link_to people_path(person_id: place.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show linked #{Person.model_name.plural.humanize}",
+                title: t(:show_linked_people, scope: [:views, :place]),
                 data: { toggle: 'tooltip' } do %>
       <%= place.mentioned_people.length %>
       <%= icon_for Person %>
     <% end %>
     <%= link_to roles_path(person_id: place.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show linked #{Role.model_name.plural.humanize}",
+                title: t(:show_linked_roles, scope: [:views, :place]),
                 data: { toggle: 'tooltip' } do %>
       <%= place.mentioned_roles.length %>
       <%= icon_for Role %>
     <% end %>
     <%= link_to deeds_path(person_id: place.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show linked #{Deed.model_name.plural.humanize}",
+                title: t(:show_linked_deeds, scope: [:views, :place]),
                 data: { toggle: 'tooltip' } do %>
       <%= place.mentioned_deeds.length %>
       <%= icon_for Deed %>
