--- a/app/views/places/show/_content.html.erb
+++ b/app/views/places/show/_content.html.erb
@@ -11,7 +11,7 @@
   <label class="col-md-3"><strong><%= Place.human_attribute_name :notes %></strong></label>
   <div class="col-md-9">
     <% if place.notes.nil? or place.notes.empty? %>
-      <em class="text-muted">no notes</em>
+      <em class="text-muted"><%= t :no_notes, scope: [:views] %></em>
     <% else %>
       <%= place.notes %>
     <% end %>
