--- a/app/views/roles/_role.html.erb
+++ b/app/views/roles/_role.html.erb
@@ -33,28 +33,28 @@
   <div class="btn-group btn-group-sm" role="group">
     <%= link_to mentions_path(person_id: role.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show linked #{Mention.model_name.plural.humanize}",
+                title: t(:show_linked_mentions, scope: [:views, :role]),
                 data: { toggle: 'tooltip' } do %>
       <%= role.mentions.count %>
       <%= icon_for Mention %>
     <% end %>
     <%= link_to people_path(person_id: role.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show linked #{Person.model_name.plural.humanize}",
+                title: t(:show_linked_people, scope: [:views, :role]),
                 data: { toggle: 'tooltip' } do %>
       <%= role.mentioned_people.length %>
       <%= icon_for Person %>
     <% end %>
     <%= link_to places_path(person_id: role.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show linked #{Place.model_name.plural.humanize}",
+                title: t(:show_linked_places, scope: [:views, :role]),
                 data: { toggle: 'tooltip' } do %>
       <%= role.mentioned_places.length %>
       <%= icon_for Place %>
     <% end %>
     <%= link_to deeds_path(person_id: role.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show linked #{Deed.model_name.plural.humanize}",
+                title: t(:show_linked_deeds, scope: [:views, :role]),
                 data: { toggle: 'tooltip' } do %>
       <%= role.mentioned_deeds.length %>
       <%= icon_for Deed %>
