--- a/app/views/storages/form/_nested_fields.html.erb
+++ b/app/views/storages/form/_nested_fields.html.erb
@@ -22,7 +22,7 @@
                         remote: true,
                         id: "btn-deassoc-collection-#{collection.id}",
                         class: 'btn btn-sm btn-danger',
-                        title: 'Deassociate Collection',
+                        title: t(:deassociate_collection, scope: [:views, :storage, :modals]),
                         data: { toggle: 'tooltip' } do %>
               <%= icon('minus', class: 'fa-fw') %>
             <% end %>
@@ -38,7 +38,7 @@
                            class: 'form-control form-control-sm',
                            type: 'text',
                            list: 'free-collections',
-                           placeholder: 'Search for non-associated Collection' %>
+                           placeholder: t(:search_collections, scope: [:views, :storage, :modals]) %>
             <%= content_tag :datalist, id: 'free-collections' do %>
               <% @unassociated[:collections].each do |collection| %>
                 <%= content_tag :option, collection.title, data: {'collection-id': collection.id } %>
@@ -58,7 +58,7 @@
             </div>
           </div>
         <% else %>
-          no unassociated Collections
+          <%= t :no_unassociated_found_html, scope: [:views, :modals], what: Collection.model_name.human %>
         <% end %>
       </li>
     </ul>
