--- a/app/views/deeds/show.html.erb
+++ b/app/views/deeds/show.html.erb
@@ -31,7 +31,7 @@
               <% if @deed.year %>
                 <%= @deed.year %>
               <% else %>
-                <em class="small text-muted">
+                <em class="text-muted">
                   <%= t(:unknown, scope: [:views]) %>
                 </em>
               <% end %>
@@ -43,7 +43,7 @@
               <% if @deed.month %>
                 <%= @deed.month %>
               <% else %>
-                <em class="small text-muted">
+                <em class="text-muted">
                   <%= t(:unknown, scope: [:views]) %>
                 </em>
               <% end %>
@@ -55,7 +55,7 @@
               <% if @deed.day %>
                 <%= @deed.day %>
               <% else %>
-                <em class="small text-muted">
+                <em class="text-muted">
                   <%= t(:unknown, scope: [:views]) %>
                 </em>
               <% end %>
